--- a/www/ui/milestone6x_screens/2-4-1_a-output.html
+++ b/www/ui/milestone6x_screens/2-4-1_a-output.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Report name X (2.4.1) step3c</title>
+	<title>Report name X (2.4.1) step3</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,8 +140,8 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app" id="div2-4-1-step3c">
-		<h2>Report name X (2.4.1) step3c</h2>
+	<div class="app" id="div2-4-1-step3">
+		<h2>Report name X (2.4.1) step3</h2>
 	
 		<div>
 			<strong>Project:</strong> project X
@@ -155,17 +155,19 @@
 
 		<p>Report Description</p>
 		
+		<p>Report Date/Time: XX/XX/XXXX XX:XX</p>
+		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th>users</th>
-		<th>XX/XX/2001  p1 open:</th>
-		<th>YY/YY/2001  p1 open:</th>
-		<th>XX/XX/2001 attribute x:</th>
-		<th>YY/YY/2001  attribute x:</th>
+		<th>&nbsp;</th>
+		<th>p1 open:</th>
+		<th>p1 closed:</th>
+		<th>P2 open:</th>
+		<th>P2 closed:</th>
 		</tr>
 		
 		<tr class="a">
-		<td><strong>combined project team</strong></td>
+		<td><strong>Cause unknown</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -173,7 +175,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><strong>role x</strong></td>
+		<td><strong>Cause understood</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -181,7 +183,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><strong>role z</strong></td>
+		<td><strong>Solution designed</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -189,7 +191,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><strong>user x</strong></td>
+		<td><strong>Solution implemented</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -197,7 +199,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><strong>user y</strong></td>
+		<td><strong>Solution verified</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -205,7 +207,24 @@
 		</tr>
 		
 		<tr class="b">
-		<td><strong>user z</strong></td>
+		<td><strong>Understood/Ignored</strong></td>
+		<td>XX</td>
+		<td>XX</td>
+		<td>XX</td>
+		<td>XX</td>
+		</tr>
+		
+		
+		<tr class="a">
+		<td><strong>Unresolved</strong></td>
+		<td>XX</td>
+		<td>XX</td>
+		<td>XX</td>
+		<td>XX</td>
+		</tr>
+		
+		<tr class="b">
+		<td><strong>Duplicate</strong></td>
 		<td>XX</td>
 		<td>XX</td>
 		<td>XX</td>
@@ -239,3 +258,5 @@
 </form>
 </body>
 </html>
+
+
