updated UI screen index per updated reports UI...

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.24 2001/08/31 17:38:35 Matthew Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.25 2001/09/04 22:32:45 braino Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -228,47 +228,60 @@
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-1_step1.html">2.4.1_step1</a></td>	
-		<td>step 1 in reports wizard</td>	
+		<td><a href="./milestone6x_screens/2-4-1_1.html">2.4.1 step 1</a></td>	
+		<td>Step 1 in reports wizard: Enter summary data and select type of report</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone6x_screens/2-4-1_step1-5.html">2.4.1_step1-5</a></td>	
-		<td>step 2 in reports wizard: comparative analysis</td>	
+		<td><a href="./milestone6x_screens/2-4-1_2.html">2.4.1 step 2</a></td>	
+		<td>step 2 in reports wizard: Select primary filter attribute</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-1_step2.html">2.4.1_step2</a></td>
-		<td>step 3 in reports wizard: comparative analysis</td>	
+		<td><a href="./milestone6x_screens/2-4-1_3.html">2.4.1 step 3</a></td>
+		<td>step 3 in reports wizard: Define PFA groups and group PFAs and PFA Options</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone6x_screens/2-4-1_step3.html">2.4.1_step3</a></td>	
-		<td>step 4 in reports wizard: comparative analysis output</td>	
+		<td><a href="./milestone6x_screens/2-4-1_4.html">2.4.1 step 4</a></td>	
+		<td>step 4 in reports wizard: Comparative analysis - define row/column criteria</td>	
 		<td>?</td>
 		</tr>
 		
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-1_step1-5b.html">2.4.1_step1-5b</a></td>	
-		<td>step 2 in reports wizard: rate of change</td>	
+		<td><a href="./milestone6x_screens/2-4-1_4b.html">2.4.1 step 4b</a></td>	
+		<td>step 2 in reports wizard: Rate of change - define row criteria</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone6x_screens/2-4-1_step2b.html">2.4.1_step2b</a></td>	
-		<td>step 3 in reports wizard: rate of change</td>	
+		<td><a href="./milestone6x_screens/2-4-1_5.html">2.4.1 step 5</a></td>	
+		<td>step 3 in reports wizard: Comparative analysis - define row/column content</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-1_step3b.html">2.4.1_step3b</a></td>	
-		<td>step 4 in reports wizard: rate of change output</td>	
+		<td><a href="./milestone6x_screens/2-4-1_5b.html">2.4.1 step 5b</a></td>	
+		<td>step 3 in reports wizard: Rate of change - define row content column content (dates)</td>	
+		<td>?</td>
+		</tr>		
+
+		<tr class="b">
+		<td><a href="./milestone6x_screens/2-4-1_a-output.html">2.4.1.X</a></td>	
+		<td>Comparative analysis: output</td>	
 		<td>?</td>
 		</tr>
+
+		<tr class="a">
+		<td><a href="./milestone6x_screens/2-4-1_b-output.html">2.4.1.X (b)</a></td>	
+		<td>Rate of change output</td>	
+		<td>?</td>
+		</tr>
+
 		</table>
 	</dd>
 	
