--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.25 2001/09/04 22:32:45 braino Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.26 2001/09/05 00:07:29 braino Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -211,7 +211,13 @@
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone5x_screens/3-5-1.html">3.5.1</a></td>	
+		<td><a href="./milestone5x_screens/2-5-0.html">2.5.0</a></td>	
+		<td>Custom alert email list</td>	
+		<td>?</td>
+		</tr>
+				
+		<tr class="b">
+		<td><a href="./milestone5x_screens/2-5-1.html">2.5.1</a></td>	
 		<td>Define custom alert email</td>	
 		<td>?</td>
 		</tr>
