--- a/www/ui/milestone6x_screens/2-4-1_1.html
+++ b/www/ui/milestone6x_screens/2-4-1_1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step 1</title>
+	<title>Define report (2.4.1) step1</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -61,16 +61,17 @@
 			</tr>
 			<tr>
 			<td>
-			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;Issue tracking</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;<a href="#">News</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Reports</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
 			</td>
 			</tr>
 			<tr>
@@ -144,16 +145,17 @@
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<th><small>1:</small> Summary info</th>
-			<td><small>2:</small> Primary filter attribute (PFA)</td>
-			<td><small>3:</small> Select row/column heading(s)</td>
+			<th>1: Summary info</th>
+			<td>2: <a href="#" title="primary filter attribute">Primary filter attribute (PFA)</a></td>
+			<td>3: <a href="#" title="select row/column heading(s)">Select row/column heading(s)</a></td>
 			</tr>
 			</table>
 		</div>
 		
 		<h3>Summary information</h3>
 		
-		<p><strong>Considering saving this report?</strong><br>If so,  enter the following information (it can be edited later).<p>
+		<div><strong>Considering saving this report?</strong></div>
+		If so,  enter the following information (it can be edited later).
 		
 		<div class="axial">
 			<table border="1" cellspacing="2" cellpadding="3">
@@ -171,13 +173,12 @@
 			</table>
 
 		<h3>Type of report</h3>
-
-<p>		
-<strong>Comparative analysis</strong><br>map attributes, attribute options, to  attributes, attribute options, or users for a single date/time</p>
-
-<p>
-<strong>Rate of change</strong><br>map attributes, attribute options, or users to multiple dates in an array</p>
-
+		
+		<div><strong>Comparative analysis</strong></div>
+		map attributes, attribute options, to  attributes, attribute options, or users for a single date/time
+	
+		<div><strong>Rate of change</strong></div>
+		map attributes, attribute options, or users to multiple dates in an array
 		
 			<table border="1" cellspacing="2" cellpadding="3">			
 			<tr>
