--- a/www/ui/milestone6x_screens/2-4-1_a-output.html
+++ b/www/ui/milestone6x_screens/2-4-1_a-output.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Report name X (2.4.1) step3</title>
+	<title>Report name X (2.4.1) a-output</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,8 +140,8 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app" id="div2-4-1-step3">
-		<h2>Report name X (2.4.1) step3</h2>
+	<div class="app" id="div2-4-1-a-output">
+		<h2>Report name X (2.4.1) a-output</h2>
 	
 		<div>
 			<strong>Project:</strong> project X
