--- a/www/ui/milestone6x_screens/2-4-1_2.html
+++ b/www/ui/milestone6x_screens/2-4-1_2.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step 2</title>
+	<title>Define report (2.4.1) step2</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -61,16 +61,17 @@
 			</tr>
 			<tr>
 			<td>
-			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;Issue tracking</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;<a href="#">News</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Reports</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
 			</td>
 			</tr>
 			<tr>
@@ -139,28 +140,27 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app" id="div2-4-1-step1">
+	<div class="app" id="div2-4-1-step2">
 		<h2>Define report (2.4.1) step2</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><small>1:</small> <a href="#" title="#">Summary info</a></td>
-			<th><small>2:</small> Primary filter attribute (PFA)</th>
-			<td><small>3:</small> <a href="#" title="#">Select row/column heading(s)</a></td>
+			<td>1: <a href="#" title="summary info">Summary info</a></td>
+			<th>2: Primary filter attribute (PFA)</th>
+			<td>3: <a href="#" title="select row/column heading(s)">Select row/column heading(s)</a></td>
 			</tr>
 			</table>
 		</div>
-		<p class="functnbar"><small>2a:</small><strong>Select PFA(s)</strong> | <small>2b:</small> PFA display options</p>
-
-
-				
+		
+		<p class="functnbar"><strong>2a: Select PFA(s)</strong> | <a href="#" title="pfa display options">2b: PFA display options</a></p>
 		
 		<h3>Select primary filter attribute(s)</h3>
 		
-		<p><strong>Primary filter attribute</strong><br> This selection defines the subset of issues that this report will be drawn from. It is often useful (but not required) to set the primary filter attribute "state" or "status", limiting the report to options such as "open", "open unassigned", "open assigned", "closed", or a combination of several of these options.</p>
+		<div><strong>Primary filter attribute</strong></div>
+		This selection defines the subset of issues that this report will be drawn from. It is often useful (but not required) to set the primary filter attribute "state" or "status", limiting the report to options such as "open", "open unassigned", "open assigned", "closed", or a combination of several of these options.
 
-<p>note: Selecting the attribute's name will select all options within that attribute. If you choose to "continue", without defining PFA groups, each selected Attribute and/or Attribute Option will appear as a seperate column (i.e. side-by-side comparison).<p>
+		<p><strong>note:</strong> Selecting the attribute's name will select all options within that attribute. If you choose to "continue", without defining PFA groups, each selected Attribute and/or Attribute Option will appear as a seperate column (i.e. side-by-side comparison).</p>
 		
 		<div class="axial">
 			<table border="1" cellspacing="2" cellpadding="3">
@@ -168,7 +168,7 @@
 			<tr>
 			<th width="120">attributes</th>
 			<td>
-			<select multiple size="20">
+			<select multiple="multiple" size="20">
 			<option>Attribute X</option>
 			<option>&nbsp;&nbsp;option X.1</option>
 			<option>&nbsp;&nbsp;option X.2</option>
