--- a/www/ui/milestone6x_screens/2-4-1_3.html
+++ b/www/ui/milestone6x_screens/2-4-1_3.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step1</title>
+	<title>Define report (2.4.1) step3</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -61,16 +61,17 @@
 			</tr>
 			<tr>
 			<td>
-			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;Issue tracking</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;<a href="#">News</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Reports</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
 			</td>
 			</tr>
 			<tr>
@@ -137,29 +138,28 @@
 		</table>
 	</div>
 	<!-- Scarab - App -->
-	<div class="app" id="div2-4-1-step1">
-		<h2>Define report (2.4.1) step 3</h2>
+	<div class="app" id="div2-4-1-step3">
+		<h2>Define report (2.4.1) step3</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><small>1:</small> <a href="#" title="#">Summary info</a></td>
-			<th><small>2:</small> Primary filter attribute (PFA)</th>
-			<td><small>3:</small> Select row/column heading(s)</td>
+			<td>1: <a href="#" title="summary info">Summary info</a></td>
+			<th>2: Primary filter attribute (PFA)</th>
+			<td>3: <a href="#" title="select row/column heading(s)">Select row/column heading(s)</a></td>
 			</tr>
 			</table>
 		</div>
-		<p class="functnbar"><small>2a:</small><a href="#" title="#">Select PFA(s)</a> | <small>2b:</small> <strong>PFA display options</strong></p>
-
-
-				
+		<p class="functnbar"><a href="#" title="select pfa(s)">2a: Select PFA(s)</a> | <strong>2b: PFA display options</strong></p>
 		
 		<h3>Define PFA Groups</h3>
-		<p><strong>Grouping PFA options</strong><br>In cases where primary filter attribute options represent similar traits (e.g. for X attribute "state" the options "open unassigned", "open assigned", and "reopened unassigned" are all "open") it may be useful to calculate and display these options as an average. Thus, all options listed below and being the same "group" are averaged together, which is reflected in the report's output.</p>
+		
+		<div><strong>Grouping PFA options</strong></div>
+		In cases where primary filter attribute options represent similar traits (e.g. for X attribute "state" the options "open unassigned", "open assigned", and "reopened unassigned" are all "open") it may be useful to calculate and display these options as an average. Thus, all options listed below and being the same "group" are averaged together, which is reflected in the report's output.
 
-<p>If there are no groups, each PFA/option will appear as a separate column.
+		<p>If there are no groups, each PFA/option will appear as a separate column.</p>
 
-			<p class="functnbar"><input type="submit" name="add group" value="add group">&nbsp;<input type="submit" name="delete group" value="delete group"></p>
+		<p class="functnbar"><input type="submit" name="add group" value="add group" />&nbsp;<input type="submit" name="delete group" value="delete group" /></p>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -171,24 +171,19 @@
 		<tr class="a">
 		<td><input type="checkbox" /></td>
 		<td>Group 1</td>
-		<td><input type="textbox" value="group 1" name="x"></td>
+		<td><input type="text" value="group 1" name="x" /></td>
 		</tr>
 		
 		<tr class="b">
 		<td><input type="checkbox" /></td>
 		<td>Group 2</td>
-		<td><input type="textbox" value="group 2" name="x"></td>
+		<td><input type="text" value="group 2" name="x" /></td>
 		</tr>
-
 		</table>
 
-			<p class="functnbar"><input type="submit" name="add group" value="add group">&nbsp;<input type="submit" name="delete group" value="delete group"></p>
-			
-
-
+		<p class="functnbar"><input type="submit" name="add group" value="add group" />&nbsp;<input type="submit" name="delete group" value="delete group" /></p>
 		
 		<h3>Grouping PFA/Options</h3>
-
 
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -238,8 +233,6 @@
 		<td>Option X.4</td>
 		</tr>
 		</table>
-
-		</div>
 
 		<p class="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="cancel" /></p>
 	</div>
