--- a/www/ui/milestone6x_screens/2-4-1_5b.html
+++ b/www/ui/milestone6x_screens/2-4-1_5b.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step1</title>
+	<title>Define report (2.4.1) step5b</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -61,16 +61,17 @@
 			</tr>
 			<tr>
 			<td>
-			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;Issue tracking</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;<a href="#">News</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Reports</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
 			</td>
 			</tr>
 			<tr>
@@ -139,32 +140,28 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app" id="div2-4-1-step1">
-		<h2>Define report (2.4.1) step 4</h2>
+	<div class="app" id="div2-4-1-step5b">
+		<h2>Define report (2.4.1) step5b</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><small>1:</small> <a href="#" title="#">Summary info</td>
-			<td><small>2:</small> <a href="#" title="#">Primary filter attribute (PFA)</a></td>
-			<th><small>3:</small> Select row/column heading(s)</th>
+			<td>1: <a href="#" title="summary info">Summary info</a></td>
+			<td>2: <a href="#" title="primary filter attribute">Primary filter attribute (PFA)</a></td>
+			<th>3: Select row/column heading(s)</th>
 			</tr>
 			</table>
 		</div>
-		<p class="functnbar"><small>3a:</small><a href="#" title="#">Define Row/Column criteria</a> | <small>3b:</small> <strong>Select row/column content</strong></p>
-
+		
+		<p class="functnbar"><a href="#" title="define row/column criteria">3a: Define row/column criteria</a> | <strong>3b: Select row/column content</strong></p>
 		
 		<h3>Select row/column content</h3>	  
 		
 		<div class="axial">
 			<table border="1" cellspacing="2" cellpadding="3">
-
 			<tr>
 			<th>Row content</th>
-			<td>
-
-
-			<select multiple size="15">
+			<td><select multiple="multiple" size="15">
 			<option>Attribute X</option>
 			<option>&nbsp;&nbsp;option X.1</option>
 			<option>&nbsp;&nbsp;option X.2</option>
@@ -199,24 +196,21 @@
 			<option>----------------------------------</option>
 			</select>			
 			</td>
-
 			</tr>
 			
 			<tr>
 			<th>column: date(s)</th>
-
 			<td>
-					<table border="1" cellspacing="2" cellpadding="3">
+		
+<table border="1" cellspacing="2" cellpadding="3">
+<tr>
+<th nowrap="nowrap">date #</th>
+<th>date setting</th>
+</tr>
 
-		<tr>
-		<th nowrap="nowrap">date #</th>
-		<th>date setting</th>
-		</tr>
-
-					<tr class="a">
-
-					<td width="120"><input type="checkbox" />&nbsp;date 1:</td>
-					<td><select>
+<tr class="b">
+<td width="120"><input type="checkbox" />&nbsp;date 1:</td>
+<td><select>
 <option>Jan</option>
 <option>Feb</option>
 <option>Mar</option>
@@ -291,12 +285,13 @@
 <option>21:00</option>
 <option>22:00</option>
 <option>23:00</option>
-<option>24:00</option></select></td>
-					</tr>
+<option>24:00</option>
+</select></td>
+</tr>
 					
-					<tr class="b">
-					<td width="120"><input type="checkbox" />&nbsp;date 2:</td>
-					<td><select>
+<tr class="b">
+<td width="120"><input type="checkbox" />&nbsp;date 2:</td>
+<td><select>
 <option>Jan</option>
 <option>Feb</option>
 <option>Mar</option>
@@ -371,16 +366,16 @@
 <option>21:00</option>
 <option>22:00</option>
 <option>23:00</option>
-<option>24:00</option></select></td>
-					</tr>
-					</table>
-				<p><input type="submit" value="add date fields" />&nbsp;<input type="submit" value="remove date fields" class="button" /></p>
-				</div>	
-			</td>
+<option>24:00</option>
+</select></td>
+</tr>
+</table>
 
+<p><input type="submit" value="add date fields" />&nbsp;<input type="submit" value="remove date fields" class="button" /></p>
+
+			</td>
 			</tr>
 			</table>
-
 		</div>
 
 		<p class="functnbar"><input type="submit" value="Generate report" />&nbsp;<input type="submit" value="cancel" /></p>
