fixed tabs on all. and removed checkboxes from _3

--- a/www/ui/milestone6x_screens/2-4-1_4.html
+++ b/www/ui/milestone6x_screens/2-4-1_4.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step4</title>
+	<title>Define report (2.4.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -141,19 +141,19 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-1-step4">
-		<h2>Define report (2.4.1) step4</h2>
+		<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td>1: <a href="#" title="summary info">Summary info</a></td>
-			<td>2: <a href="#" title="primary filter attribute">Primary filter attribute (PFA)</a></td>
+			<td>2: Primary filter attribute (PFA)</td>
 			<th>3: Select row/column heading(s)</th>
 			</tr>
 			</table>
 		</div>
 		
-		<p class="functnbar"><strong>3a: Define row/column criteria</strong> | <a href="#" title="select row/column content">3b: Select row/column content</a></p>
+		<p class="functnbar"><strong>3a: Define row/column criteria</strong> | 3b: Select row/column content</p>
 		
 		<h3>Report content: Comparative analysis</h3>	  
 		
