--- a/www/ui/milestone6x_screens/2-4-1_4b.html
+++ b/www/ui/milestone6x_screens/2-4-1_4b.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step4b</title>
+	<title>Define report (2.4.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -141,7 +141,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-1-step4b">
-		<h2>Define report (2.4.1) step4b</h2>
+		<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
@@ -153,7 +153,7 @@
 			</table>
 		</div>
 		
-		<p class="functnbar"><strong>3a: Define row/column criteria</strong> | <a href="#" title="select row/column content">3b: Select row/column content</a></p>
+		<p class="functnbar"><strong>3a: Define row/column criteria</strong> | 3b: Select row/column content</p>
 		
 		<h3>Report content: Rate of change analysis</h3>	  
 		
