--- a/www/ui/milestone6x_screens/2-4-1_1.html
+++ b/www/ui/milestone6x_screens/2-4-1_1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step1</title>
+	<title>Define report (2.4.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,14 +140,14 @@
 	<!-- Scarab - App -->
 	
 	<div class="app" id="div2-4-1-step1">
-		<h2>Define report (2.4.1) step1</h2>
+		<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<th>1: Summary info</th>
-			<td>2: <a href="#" title="primary filter attribute">Primary filter attribute (PFA)</a></td>
-			<td>3: <a href="#" title="select row/column heading(s)">Select row/column heading(s)</a></td>
+			<td>2:Primary filter attribute (PFA)</td>
+			<td>3:Select row/column heading(s)</td>
 			</tr>
 			</table>
 		</div>
