--- a/www/ui/milestone6x_screens/2-4-1_2.html
+++ b/www/ui/milestone6x_screens/2-4-1_2.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step2</title>
+	<title>Define report (2.4.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -141,19 +141,19 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-1-step2">
-		<h2>Define report (2.4.1) step2</h2>
+		<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td>1: <a href="#" title="summary info">Summary info</a></td>
 			<th>2: Primary filter attribute (PFA)</th>
-			<td>3: <a href="#" title="select row/column heading(s)">Select row/column heading(s)</a></td>
+			<td>3:Select row/column heading(s)</td>
 			</tr>
 			</table>
 		</div>
 		
-		<p class="functnbar"><strong>2a: Select PFA(s)</strong> | <a href="#" title="pfa display options">2b: PFA display options</a></p>
+		<p class="functnbar"><strong>2a: Select PFA(s)</strong> | 2b: PFA display options</p>
 		
 		<h3>Select primary filter attribute(s)</h3>
 		
