--- a/www/ui/milestone6x_screens/2-4-1_3.html
+++ b/www/ui/milestone6x_screens/2-4-1_3.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step3</title>
+	<title>Define report (2.4.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -139,14 +139,14 @@
 	</div>
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-1-step3">
-		<h2>Define report (2.4.1) step3</h2>
+		<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td>1: <a href="#" title="summary info">Summary info</a></td>
 			<th>2: Primary filter attribute (PFA)</th>
-			<td>3: <a href="#" title="select row/column heading(s)">Select row/column heading(s)</a></td>
+			<td>3: Select row/column heading(s)</td>
 			</tr>
 			</table>
 		</div>
@@ -187,14 +187,14 @@
 
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th nowrap="nowrap">&nbsp;</th>
+		
 		<th><a href="#" title="sort">group name</a></th>
 		<th><a href="#" title="sort">attribute</a></th>
 		<th><a href="#" title="sort">option</a></th>
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" /></td>
+		
 		<td><select>
 		<option>Group 1</option>
 		<option>Group 2</option>
@@ -204,7 +204,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" /></td>
+		
 		<td><select>
 		<option>Group 1</option>
 		<option>Group 2</option>
@@ -214,7 +214,7 @@
 		</tr>
 
 		<tr class="a">
-		<td><input type="checkbox" /></td>
+		
 		<td><select>
 		<option>Group 1</option>
 		<option>Group 2</option>
@@ -224,7 +224,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" /></td>
+		
 		<td><select>
 		<option>Group 1</option>
 		<option>Group 2</option>
