--- a/www/ui/milestone6x_screens/2-4-1_5b.html
+++ b/www/ui/milestone6x_screens/2-4-1_5b.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Define report (2.4.1) step5b</title>
+	<title>Define report (2.4.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -141,7 +141,7 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-4-1-step5b">
-		<h2>Define report (2.4.1) step5b</h2>
+		<h2>Define report (2.4.1)</h2>
 		
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
